# mailing_service

./: pyproject.toml
config/: settings.py  urls.py
mailing_app/: apps.py  cron.py  forms.py  models.py  services.py  urls.py  views.py
mailing_app/management/commands/: create_su.py  launch_the_mailings.py
mailing_app/migrations/: 0001_initial.py  0002_alter_mailing_mailing_time.py  0002_blog.py  0003_alter_mailing_status.py  0003_remove_mailinglog_client_and_more.py  0004_alter_message_mailing.py  0004_remove_mailing_message_message_mailing.py  0005_mailinglog_time.py  0006_mailing_user.py  0007_alter_mailing_user.py  0008_alter_mailing_options.py
mailing_app/templates/mailing_app/: base.html  blog.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  candidates.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  contact.html  homepage.html  index.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html
mailing_app/templatetags/: my_tags.py
users_app/: admin.py  forms.py  models.py  urls.py  views.py
users_app/migrations/: 0001_initial.py  0002_alter_user_options.py
users_app/templates/users_app/: email_verification.html  login.html  register.html  registration_email_sent.html  user_form.html
