[tool.poetry]
name = "mailing-service"
version = "0.1.0"
description = ""
authors = ["TagRomEdu <qwertystyles@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
redis = "^5.0.1"
python-dotenv = "^1.0.0"
ipython = "^8.17.1"
pytils = "^0.4.1"
pillow = "^10.1.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
